# pytoys

./: README.md  pyproject.toml
etc/: request-sample.yaml
scripts/: autofix.sh
src/pytoys/cmd/: __init__.py  base.py  custome_types.py  ext.py  win.py
src/pytoys/code/: qrcode.py
src/pytoys/common/: command.py  httpclient.py  logging.py  prettytable.py  table.py  user_input.py
src/pytoys/crawler/: _oneloume.py  oneloume.py
src/pytoys/crawler/oneloume/: page.py  parser.py
src/pytoys/disk/: tools.py
src/pytoys/github/: proxy.py
src/pytoys/leecode/: array_solution.py
src/pytoys/net/: areacode.py  ipinfo.py  location.py  utils.py  weather.py
src/pytoys/openapi/: bingimage.py  qqmap.py
src/pytoys/pip/: repos.py
src/pytoys/vscode/: extension.py
