[project]
name = "pytoys"
version = "0.1.1"
description = "Python toys for fun and learning"
authors = [
    {name = "BytemanD", email = "byteman.d@outlook.com"},
]
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "prettytable>=3.16.0",
    "termcolor>=3.1.0",
    "tqdm>=4.67.1",
    "qrcode>=8.2",
    "Pillow>=11.2.1",
    "pyzbar>=0.1.9",
    "requests>=2.32.3",
    "pyjwt>=2.10.1",
    "cryptography>=45.0.2",
    "pyyaml>=6.0.2",
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
]
requires-python = ">=3.10"
readme = "README.md"
license-files = ["LICEN[CS]E*"]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
]

[project.scripts]
pytoys = "pytoys.cmd.base:cli"
pytoys-ext = "pytoys.cmd.ext:cli"
pytoys-win = "pytoys.cmd.win:cli"

[tool.pylint.messages_control]
disable = ["missing-docstring",
           "too-many-instance-attributes", "too-few-public-methods",
           "inconsistent-return-statements",
           "too-many-arguments", "too-many-positional-arguments"]

[tool.black]
line-length = 100

[tool.pylint]
# 启用彩色输出
output-format = "colorized"

[tool.pylint.format]
# 强制使用 LF 换行符（Unix 风格）
expected-line-ending-format = "LF"

[tool.uv.sources]
torch = { index = "tsinghua" }

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
